--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -280,4 +280,7 @@
     <string name="by_name">Por nombre</string>
     <string name="by_creation_date_ascending">Ascendente por fecha de creación</string>
     <string name="by_creation_date_descending">Descendente por fecha de creación</string>
+    <string name="create_out_of_stock_reminder">Crear recordatorio de existencias agotadas</string>
+    <string name="successfully_created_reminder">Recordatorio creado con éxito</string>
+    <string name="create_expiration_date_reminder">Crear recordatorio de fecha de vencimiento</string>
 </resources>
