--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -275,4 +275,7 @@
     <string name="by_name">Nach Name</string>
     <string name="by_creation_date_ascending">Aufsteigend nach Erstellungsdatum</string>
     <string name="by_creation_date_descending">Absteigend nach Erstellungsdatum</string>
+    <string name="create_out_of_stock_reminder">Vorratserinnerung erstellen</string>
+    <string name="successfully_created_reminder">Neue Erinnerung erfolgreich erstellt</string>
+    <string name="create_expiration_date_reminder">Ablaufdatum-Erinnerung erstellen</string>
 </resources>
