--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -275,4 +275,7 @@
     <string name="by_name">Nimen mukaan</string>
     <string name="by_creation_date_ascending">Nouseva luontipäivämäärän mukaan</string>
     <string name="by_creation_date_descending">Laskeva luontipäivämäärän mukaan</string>
+    <string name="create_out_of_stock_reminder">Luo muistutus loppumisesta</string>
+    <string name="successfully_created_reminder">Uusi muistutus luotu onnistuneesti</string>
+    <string name="create_expiration_date_reminder">Luo vanhentumispäivämäärämuistutus</string>
 </resources>
