--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -282,4 +282,7 @@
     <string name="by_name">По имени</string>
     <string name="by_creation_date_ascending">По возрастанию даты создания</string>
     <string name="by_creation_date_descending">По убыванию даты создания</string>
+    <string name="create_out_of_stock_reminder">Создать напоминание об отсутствии на складе</string>
+    <string name="successfully_created_reminder">Новое напоминание успешно создано</string>
+    <string name="create_expiration_date_reminder">Создать напоминание о сроке годности</string>
 </resources>
