--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -270,4 +270,7 @@
     <string name="by_name">按名稱</string>
     <string name="by_creation_date_ascending">按創建日期升序</string>
     <string name="by_creation_date_descending">按創建日期降序</string>
+    <string name="create_out_of_stock_reminder">建立庫存不足提醒</string>
+    <string name="successfully_created_reminder">已成功建立新提醒</string>
+    <string name="create_expiration_date_reminder">建立到期日期提醒</string>
 </resources>
