--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -280,5 +280,8 @@
     <string name="by_name">By name</string>
     <string name="by_creation_date_ascending">Ascending by creation date</string>
     <string name="by_creation_date_descending">Descending by creation date</string>
+    <string name="create_out_of_stock_reminder">Create out of stock reminder</string>
+    <string name="successfully_created_reminder">Successfully created new reminder</string>
+    <string name="create_expiration_date_reminder">Create expiration date reminder</string>
 </resources>
 
