--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -209,7 +209,7 @@
     <string name="create_calendar_entry">Kalendereintrag erstellen</string>
     <string name="notes">Notizen</string>
     <string name="automatically_taken">Automatisch als eingenommen markieren</string>
-    <string name="sort">Sort</string>
+    <string name="sort">Sortieren</string>
     <string name="high_and_alarm">Hoch + Alarm</string>
     <string name="enable_notification_alarm_dialog">Um die Anzeige von Erinnerungen als Alarme zu ermöglichen, aktivieren Sie dies für MedTimer im folgenden Menü</string>
     <string name="daily_from_to">Tägliches Intervall von %1$s bis %2$s</string>
