--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -278,4 +278,6 @@
     <string name="create_out_of_stock_reminder">Voorraadherinnering aanmaken</string>
     <string name="successfully_created_reminder">Nieuwe herinnering succesvol aangemaakt</string>
     <string name="create_expiration_date_reminder">Vervaldatumherinnering aanmaken</string>
+    <string name="duplicate">Dupliceren</string>
+    <string name="duplicate_including_reminders">Dupliceren inclusief herinneringen</string>
 </resources>
