--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -278,4 +278,6 @@
     <string name="create_out_of_stock_reminder">பங்கு நினைவூட்டலை உருவாக்கவும்</string>
     <string name="successfully_created_reminder">புதிய நினைவூட்டல் வெற்றிகரமாக உருவாக்கப்பட்டது</string>
     <string name="create_expiration_date_reminder">காலாவதி தேதி நினைவூட்டலை உருவாக்கவும்</string>
+    <string name="duplicate">நகலெடு</string>
+    <string name="duplicate_including_reminders">நினைவூட்டல்களுடன் நகலெடு</string>
 </resources>
